# mando

./: --output  .editorconfig  .gitignore  .yamlfmt  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  dep-graph.toml
cli/: Cargo.toml
cli/src/: captain.rs  captain_review.rs  cron.rs  gateway.rs  http.rs  main.rs  ops.rs  project.rs  scout.rs  sessions.rs  todo.rs  todo_artifacts.rs  todo_display.rs  voice.rs  worktree.rs
crates/captain/: Cargo.toml
crates/captain/src/: lib.rs
crates/captain/src/config/: mod.rs  paths.rs
crates/captain/src/io/: captain_lock.rs  gh_run.rs  git.rs  github.rs  github_pr.rs  headless_cc.rs  ops_log.rs  pid_lookup.rs  pid_registry.rs  session_terminate.rs  task_cleanup.rs  task_store.rs  timeline_store.rs  transcript.rs
crates/captain/src/runtime/: action_contract.rs  captain_merge.rs  (+56 more)
crates/global-infra/: Cargo.toml
crates/global-infra/src/: clock.rs  html.rs  ids.rs  json_file.rs  lib.rs  paths.rs  uuid.rs
crates/global-net/: Cargo.toml
crates/global-net/src/: lib.rs
crates/mando-captain/: Cargo.toml
crates/mando-captain/src/: lib.rs  pr_evidence.rs
crates/mando-cc/: Cargo.toml
crates/mando-cc/src/: binary.rs  config.rs  hooks.rs  lib.rs  message.rs  oneshot.rs  process.rs  protocol.rs  session.rs  stream.rs  transcript.rs
crates/mando-config/: Cargo.toml
crates/mando-config/assets/: captain-workflow.yaml  scout-workflow.yaml  voice-workflow.yaml
crates/mando-config/src/: lib.rs  loader.rs  logo.rs  paths.rs  settings.rs  skills.rs  tests.rs  tests_paths.rs  voice_workflow.rs  workflow.rs  workflow_render.rs  workflow_scout.rs  workflow_validate.rs
crates/mando-db/: Cargo.toml
crates/mando-db/migrations/: 001_initial.sql  002_drop_linear.sql  002_session_status_rename.sql  003_add_worker_seq.sql  005_pr_bare_number.sql  005_workbenches.sql  006_captain_fail_counters.sql  006_drop_clarifier_questions.sql  007_projects_table.sql  010_rev_column.sql  011_remove_task_archived_at.sql  012_workbench_pinned.sql  013_session_resumed_at.sql  014_ask_history_sessions.sql  015_scout_research_runs.sql  016_scout_summary_article.sql  019_artifact_redesign.sql  024_task_no_auto_merge.sql  025_timeline_dedupe_nullable.sql
crates/mando-db/src/: caller.rs  lib.rs  pool.rs
crates/mando-gateway/: Cargo.toml
crates/mando-gateway/src/: auth.rs  auto_title.rs  background_tasks.rs  config_manager.rs  credentials.rs  cron_executor.rs  hooks.rs  image_upload.rs  image_upload_ext.rs  instance.rs  lib.rs  main.rs  response.rs  routes_ai.rs  routes_analytics.rs  routes_artifacts.rs  routes_captain.rs  routes_captain_adopt.rs  routes_channels.rs  routes_clarifier.rs  routes_client_logs.rs  routes_config.rs  routes_credentials.rs  routes_cron.rs  routes_knowledge.rs  routes_ops.rs  routes_projects.rs  routes_scout.rs  routes_scout_ai.rs  routes_scout_bulk.rs  routes_scout_telegraph.rs  routes_sessions.rs  routes_stats.rs  routes_task_actions.rs  routes_task_advisor.rs  routes_task_advisor_helpers.rs  routes_task_ask.rs  routes_task_detail.rs  routes_task_router.rs  routes_tasks.rs  (+14 more)
crates/mando-scout/: Cargo.toml
crates/mando-scout/src/: lib.rs
crates/mando-shared/: Cargo.toml
crates/mando-shared/src/: bus.rs  error.rs  helpers.rs  lib.rs  quiet_mode.rs  retry.rs  telegram_tables.rs
crates/mando-telegram/: Cargo.toml
crates/mando-telegram/src/: api.rs  bot.rs  bot_dispatch.rs  bot_helpers.rs  bot_sessions.rs  callback_actions.rs  callbacks.rs  callbacks_picker.rs  callbacks_session.rs  gateway_paths.rs  http.rs  lib.rs  main.rs  message_helpers.rs  notifications.rs  permissions.rs  picker_store.rs  sse.rs
crates/mando-terminal/: Cargo.toml
crates/mando-terminal/src/: env.rs  history.rs  host.rs  lib.rs  session.rs  session_io.rs  tests.rs  types.rs
crates/mando-types/: Cargo.toml
crates/mando-types/src/: ask_history.rs  captain.rs  cron.rs  events.rs  lib.rs  rebase_state.rs  scout.rs  session.rs  session_ids.rs  task.rs  task_status.rs  task_update.rs  tests.rs  timeline.rs  workbench.rs  workbench_layout.rs
crates/sessions/: Cargo.toml
crates/transport-http/: Cargo.toml
crates/transport-http/src/: auth.rs  lib.rs  response.rs
crates/transport-tg/: Cargo.toml
crates/transport-tg/src/: api.rs  bot.rs  bot_dispatch.rs  bot_helpers.rs  bot_sessions.rs  callback_actions.rs  callbacks.rs  callbacks_picker.rs  gateway_paths.rs  http.rs  lib.rs  message_helpers.rs  notifications.rs  permissions.rs  picker_store.rs  sse.rs
rust/: Cargo.toml  dep-graph.toml
rust/.cargo/: deny.toml
rust/cli/: Cargo.toml
rust/cli/src/: captain.rs  credentials.rs  gateway_paths.rs  http.rs  main.rs  motion_check.rs  project.rs  scout.rs  sessions.rs  todo.rs  todo_artifacts.rs  todo_display.rs  transcript_render.rs  worktree.rs
rust/contracts/: capabilities.json  daemon-api.toml
rust/crates/api-types/: Cargo.toml  public_api.txt
rust/crates/api-types-codegen/: Cargo.toml
rust/crates/captain/: Cargo.toml  public_api.txt
rust/crates/gateway-client/: Cargo.toml  public_api.txt
rust/crates/global-bus/: Cargo.toml  public_api.txt
rust/crates/global-claude/: Cargo.toml  public_api.txt
rust/crates/global-db/: Cargo.toml  build.rs  migration-hashes.txt  public_api.txt
rust/crates/global-git/: Cargo.toml  public_api.txt
rust/crates/global-github/: Cargo.toml  public_api.txt
rust/crates/global-infra/: public_api.txt
rust/crates/global-net/: Cargo.toml  public_api.txt
rust/crates/global-types/: Cargo.toml  public_api.txt
rust/crates/mando-gateway/: Cargo.toml  public_api.txt
rust/crates/scout/: Cargo.toml  public_api.txt
rust/crates/sessions/: Cargo.toml  public_api.txt
rust/crates/sessions-db/: Cargo.toml  public_api.txt
rust/crates/settings/: Cargo.toml  build.rs  public_api.txt
rust/crates/terminal/: Cargo.toml  public_api.txt
rust/crates/transport-http/: Cargo.toml  public_api.txt
rust/crates/transport-http-macros/: Cargo.toml  public_api.txt
rust/crates/transport-tg/: Cargo.toml  public_api.txt
rust/crates/transport-ui/: Cargo.toml  public_api.txt
(+1998 files in other folders)
