[workspace]
resolver = "2"
members = [
    "crates/mando-uuid",
    "crates/mando-types",
    "crates/mando-config",
    "crates/mando-shared",
    "crates/mando-captain",
    "crates/mando-scout",
    "crates/mando-readability",
    "crates/mando-gateway",
    "crates/mando-telegram",
    "cli",
    "crates/mando-cc",
    "crates/mando-db",
    "crates/mando-terminal",
]

[workspace.package]
version = "0.1.17-beta.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tribedotrun/mando"
homepage = "https://mando.build"

[workspace.dependencies]
# External (≥5k stars)
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
minijinja = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
html5ever = "0.29"
regex = "1"
arc-swap = "1"
anyhow = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "local-offset"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rustc-hash = "2"

# Internal crates
mando-uuid = { path = "crates/mando-uuid" }
mando-types = { path = "crates/mando-types" }
mando-config = { path = "crates/mando-config" }
mando-shared = { path = "crates/mando-shared" }
mando-captain = { path = "crates/mando-captain" }
mando-scout = { path = "crates/mando-scout" }
mando-cc = { path = "crates/mando-cc" }
mando-readability = { path = "crates/mando-readability" }
mando-db = { path = "crates/mando-db" }
mando-gateway = { path = "crates/mando-gateway" }
mando-terminal = { path = "crates/mando-terminal" }

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = 0
