[workspace]
resolver = "2"
members = [
    # (all legacy crates dissolved)
    "cli",

    # Domain crates
    "crates/captain",
    "crates/scout",
    "crates/sessions",
    "crates/settings",
    "crates/terminal",

    # Global providers
    "crates/global-types",
    "crates/global-infra",
    "crates/global-db",
    "crates/global-bus",
    "crates/global-claude",
    "crates/global-net",

    # Contract + transports + binary
    "crates/api-types",
    "crates/transport-http",
    "crates/transport-tg",
    "crates/mando-gateway",

    # Dev-only (excluded from release)
]

[workspace.package]
version = "0.1.18-beta.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tribedotrun/mando"
homepage = "https://mando.build"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
minijinja = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
html5ever = "0.29"
regex = "1"
arc-swap = "1"
anyhow = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "local-offset"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rustc-hash = "2"

# Internal crates
mando-terminal = { path = "crates/terminal" }

# Domain crates
captain = { path = "crates/captain" }
scout = { path = "crates/scout" }
sessions = { path = "crates/sessions" }
settings = { path = "crates/settings" }
terminal = { path = "crates/terminal" }

# Global crates
global-types = { path = "crates/global-types" }
global-infra = { path = "crates/global-infra" }
global-db = { path = "crates/global-db" }
global-bus = { path = "crates/global-bus" }
global-claude = { path = "crates/global-claude" }
global-net = { path = "crates/global-net" }
api-types = { path = "crates/api-types" }
transport-http = { path = "crates/transport-http" }
transport-tg = { path = "crates/transport-tg" }

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
debug = 0
