[package]
name = "mando-cli"
version.workspace = true
edition = "2021"
description = "Command-line interface for interacting with the Mando daemon"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "mando"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
dirs = "6"
urlencoding = "2"
