[package]
name = "captain"
version.workspace = true
edition = "2021"
description = "Autonomous agent orchestrator — task lifecycle, reviews, and interventions"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
global-types = { path = "../global-types" }
global-infra = { path = "../global-infra" }
global-claude = { path = "../global-claude" }
global-bus = { path = "../global-bus" }
global-db = { path = "../global-db" }
sessions = { path = "../sessions" }
settings = { path = "../settings" }
time.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex = { workspace = true }
sqlx.workspace = true
rustc-hash.workspace = true
tokio-util.workspace = true
futures = "0.3"
libc = "0.2"
