[package]
name = "global-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
global-types = { path = "../global-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
html5ever.workspace = true
