[package]
name = "mando-cc"
version.workspace = true
edition = "2021"
description = "Claude Code process management — spawn, stream, and control agent sessions"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
mando-uuid = { workspace = true }
mando-config = { workspace = true }
mando-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
