[package]
name = "mando-config"
version.workspace = true
edition = "2021"
description = "Configuration loading, validation, and workflow templates"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mando-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
minijinja.workspace = true
tracing.workspace = true
iana-time-zone = "0.1"
