[package]
name = "mando-gateway"
version.workspace = true
edition = "2021"
description = "HTTP/SSE daemon — API server, captain tick loop, and event streaming"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "mando-gw"
path = "src/main.rs"

[dependencies]
mando-types.workspace = true
mando-config.workspace = true
mando-captain.workspace = true
mando-scout.workspace = true
mando-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
clap.workspace = true
reqwest.workspace = true
arc-swap.workspace = true
anyhow.workspace = true
time.workspace = true
mando-uuid.workspace = true
mando-cc.workspace = true
mando-db.workspace = true
sqlx.workspace = true
mando-telegram = { path = "../mando-telegram" }
mando-terminal.workspace = true
async-stream = "0.3"
base64 = "0.22"
bytes = "1"
toml = "0.8"
libc = "0.2"

[features]
default = ["otlp"]
otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

[dev-dependencies]
reqwest = { workspace = true, features = ["json", "multipart"] }
tokio.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
