[package]
name = "mando-shared"
version.workspace = true
edition = "2021"
description = "Shared business logic, state management, and persistence layer"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mando-types.workspace = true
mando-config.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
sqlx.workspace = true
mando-db.workspace = true
