[package]
name = "mando-types"
version.workspace = true
edition = "2021"
description = "Shared domain types for tasks, sessions, and events"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mando-uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
