[package]
name = "transport-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
api-types = { path = "../api-types" }
global-types = { path = "../global-types" }
global-infra = { path = "../global-infra" }
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
anyhow.workspace = true
