[package]
name = "global-github"
version.workspace = true
edition = "2021"
description = "GitHub CLI/API provider boundary"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
global-infra = { path = "../global-infra" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
