[package]
name = "settings"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
api-types = { path = "../api-types" }
global-types = { path = "../global-types" }
global-db = { path = "../global-db" }
global-infra = { path = "../global-infra" }
global-git = { path = "../global-git" }
global-net = { path = "../global-net" }
global-claude = { path = "../global-claude" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
minijinja.workspace = true
rustc-hash.workspace = true
iana-time-zone = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio.workspace = true
reqwest.workspace = true
arc-swap.workspace = true
base64 = "0.22"
